# compass_biped

gcb_control/: CMakeLists.txt  package.xml
gcb_control/config/: gcb_control.yaml
gcb_control/launch/: gcb_control.launch
gcb_description/: CMakeLists.txt  package.xml
gcb_description/urdf/: gcb.gazebo  gcb.xacro
gcb_gazebo/: CMakeLists.txt  package.xml
gcb_gazebo/launch/: gcb_world.launch
gcb_gazebo/worlds/: gcb.world
